--- a/04_removeFromArray/removeFromArray.html
+++ b/04_removeFromArray/removeFromArray.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <script>
-      const removeFromArray = function(array, remove){
+      const removeFromArray = function(array, ...remove){
+        // console.log(remove[0])
+        // console.log(remove[1])
+        // console.log(remove[2])
+        // console.log(remove[3])
+
         const myArray = [];
         let i = 0;
-        let index = array.indexOf(remove);
+        // let index = array.indexOf(remove[0]);
+        // console.log('index',index)
         while (i < array.length){
-          if(array[i] === remove){
-            // console.log(i);
-            // console.log('I find you')
+          if(array[i] === remove[0]|| array[i] === remove[1]||array[i] === remove[2]||array[i] === remove[3]){
             (array.splice(i, 1))
-            // break;
           }else{
             i++;
-            // console.log(i);
           }
         }
         myArray.push(array);
@@ -28,7 +30,7 @@
         return array
       }
       
-      console.log(removeFromArray([1, 2, 3, 4], 3, 2));
+      console.log(removeFromArray([1, 2, 3, 4], "1", 3));
     </script>
 </body>
 </html>
